# plugin_mcp_app

./: install.json  main.sh  manifest.json  pyproject.toml  readme.md
src/: main.py  mcp.json  mcp_hub.py  mcp_pipe.py  mcp_pipe.sh  mcp_proxy.py  mcp_proxy.sh  mcp_proxy_run.py
src/mcp_proxy/: __init__.py  proxy_server.py  sse_client.py
src/plugin_mcp_app/: __init__.py  config_server.py  main.py
src/plugin_mcp_app/assets/: index.html  mcp_servers.json
